# rover

./: .gitignore  CMakeLists.txt  package.xml
scripts/: inicio_rover.launch  node_Arm_Traction.py  node_FPGA.py  node_IMU.py  node_Odometry.py  node_arm_traction.py  node_autonomous_traction.py  node_fpga.py  node_geociencia.py  node_imu.py  node_interface.py  node_odometry.py  node_pid_plot_rpm.py  test_node.py
