<package format="2">
  <name>rover</name>
  <version>1.0.0</version>
  <description>
  This package contains robocol ROS implementation of nodes inside the rover
  </description>
  <maintainer email="jd.serranom@uniandes.edu.co">Juan David Serrano</maintainer>
  <maintainer email="ma.escalante@uniandes.edu.co">Maria Alejandra Escalante</maintainer>
  <maintainer email="jf.gaviria@uniandes.edu.co">Juan Felipe Gaviria</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!--<build_depend>message_generation</build_depend>-->
  <depend>master_msgs</depend>

  <!--<exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <<exec_depend>message_runtime</exec_depend>
  <exec_depend>master_msgs</exec_depend>-->
  

</package>
